# g4scratch

./: .gitignore  CMakeLists.txt  MyDetectorConstruction.h  MyDetectorConstructionGDML.h  MyDrawGraph.c  MyDrawHistFromTree.c  MyHit.h  MyOutputManager.cxx  MyOutputManager.h  MyPhysicsList.h  MyPrimaryGeneratorAction.h  MyRunManager.cxx  MyRunManager.h  MySensitiveDetector.cxx  MySensitiveDetector.h  MyStepMax.h  Readme.md  a.out  basic.c  basic.cxx  compile.sh  createfile.C  goto_wiki.sh  simplegeometry.c  simplegeometry.gdml  tree1w.c
include/: DetectorGe.h  DetectorSi.h  ExperimentConstruction.h  ExperimentalHall.h  Materials.h  MyDetectorConstruction.h  MyDetectorConstructionGDML.h  MyHit.h  MyPrimaryGeneratorAction.h  MyRunManager.h  MyStepMax.h  Particle.h  Target.h  VacChamber.h
scripts/: MyDrawGraph.c  MyImpl.c  readGDML.c  run.sh  rutherfordsetup.c  show.sh  simplegeometry.c
src/: DetectorGe.cxx  DetectorSi.cxx  ExperimentConstruction.cxx  ExperimentalConstruction.cxx  ExperimentalHall.cxx  Materials.cxx  MyDetectorConstruction.cxx  MyOutputManager.cxx  MyRunManager.cxx  MySensitiveDetector.cxx  Target.cxx  VacChamber.cxx
